# matchcore

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  TEST_SETUP.md
src/: main.cpp
